# CeleryGenerateCsv

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: celery_worker.py
